python/test-data/testTypesDict2.err
Traceback (most recent call last):
  File "test-data/testTypesDict2.py", line 10, in <module>
    foo({'x': lambda: "1", 'y': lambda: 42}) # error because the 2nd functions returns an int
  File "test-data/testTypesDict2.py", line 6, in foo
    res.append(f())
WyppTypeError: dict_items does not implement protocol Iterable[tuple[~K=str, ~V=Callable[[], str]]] correctly.
given:    dict_items([('x', <function <lambda> at 0x00>), ('y', <function <lambda> at 0x00>)])
expected: value of type Iterable[tuple[~K=str, ~V=Callable[[], str]]]

context: foo(d: dict[str, Callable[[], str]]) -> list[str]
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
declared at: test-data/testTypesDict2.py:3
caused by: test-data/testTypesDict2.py:10
  | foo({'x': lambda: "1", 'y': lambda: 42}) # error because the 2nd functions returns an int

given:    42
expected: value of type str

context: __iter__(self: Self) -> Iterator[tuple[~K=str, Callable[[], str]]]
                                                                     ^^^
declared at: site-lib/untypy/impl/interface.py:188
caused by: test-data/testTypesDict2.py:10
  | foo({'x': lambda: "1", 'y': lambda: 42}) # error because the 2nd functions returns an int
